syntax = "proto3";

package spine.protodata.hello;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.protodata.hello";
option java_outer_classname = "SizeOptionProjectionProto";
option java_multiple_files = true;

import "spine/protodata/ast.proto";

message SizeOptionProjection {
  option (entity).kind = PROJECTION;

  SizeOptionProjectionId id = 1;

  string size_expression = 2;
}

message SizeOptionProjectionId {

  spine.protodata.FilePath file = 1;

  spine.protodata.TypeName type = 2;

  spine.protodata.FieldName field = 3;
}
